clang/test/BSC/Negative/SafeZone/unsafe_stmt_or_decl/unsafe_stmt_or_decl.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

 safe int main(void) {
  int a;  // expected-error {{uninitialized declarator is forbidden in the safe zone}}
  a = 0;
  lab:   // expected-error {{label statement is forbidden in the safe zone}}
  if (a < 10) {
    a = a + 1;
    goto lab;  // expected-error {{goto statement is forbidden in the safe zone}}
  }
  switch (a) {
    int b = 1; // expected-error {{variable declaration in the top-level switch block is forbidden in the safe zone}}
    case 0: {
      int c = 1;  // ok
      break;
    }
    {
      case 1:     // expected-error {{case statement not in top-level switch block is forbidden in the safe zone}}
        break; 
    }
    {   
      {
        case 2:     // expected-error {{case statement not in top-level switch block is forbidden in the safe zone}}
        case 3:     // expected-error {{case statement not in top-level switch block is forbidden in the safe zone}}
          break;
      }
    }
    case 4:             // ok
      break;
    case 5: {
      int d = 1;
      switch (d) {
        case 1:     // ok
          break;
        {
          case 2: // expected-error {{case statement not in top-level switch block is forbidden in the safe zone}}
          break;
        }
        default:    // ok
          break;
      }
      break;
    }
    {
      default:       // expected-error {{default statement not in top-level switch block is forbidden in the safe zone}}
        break;
    }
  }
  int ret = 0;
  int src = 1;
  asm("move %0, %1\n\t" :"=r"(ret) :"r"(src));   // expected-error {{asm statement is forbidden in the safe zone}}
  return 0;
}